Implement modifier model JSON
Though a mergable JSON, you can now specify specific textures that are part of a tool instead of using texture existance
This notably allows configuring a modifier on a per tool basis, which can be used to reduce the number of texture lookups we do
Old system will remain around until 1.21. Current tools and models still need to migrate